##############################################
######         My New Project           ######
##############################################
Start Date: 2019 04 04
Author: Muad


##### START OF Task List ####
1. Define data structure for the gamestate;
2. Define initial gamestate states;
3. Draw the gamestate;
4. Draw thin and dynamic walls (failed)
5. Test Thee.JS library for rendering 3D Instead of P5.js
6. Draw thick lines in Three.JS (failed)
7. Draw Pit walls in thin lines
8. Define coord system and adust Camera position
9. Define Piece and spawn a single-block piece
10. Move piece
11. Drop piece
12. Check completed planes
13. Added support for multi-block pieces
14. Piece rotation and refactor movement
15. Prevent rotation out-of-borders
16. GameState - Start, run, over, pause
17. Backend integration
##### END OF Task List ####


.: Default Empty Project
- P5.js/THREE.js libraries
- GameSpark libraries
- default index.html
- default style.css
- default sketch.js