@@ -1,6 +1,6 @@
 class drawUI {
     constructor() {
-
+        this.leaderboard = document.getElementById("lb-data");
     }
 
     showNameForm() {
@@ -28,6 +28,19 @@ class drawUI {
     }
     unPause() {
         document.getElementById("statePause").style.display = 'none';
+    }
+
+    updateLeaderboard() {
+        let lb_text = '';
+        if (game.leaderboard) {
+            for (let i = 0; i < game.leaderboard.length; ++i) {
+                // console.log(game.leaderboard[i].userName);
+                lb_text += game.leaderboard[i].rank + '. ';
+                lb_text += game.leaderboard[i].userName + ' ';
+                lb_text += game.leaderboard[i].END_GAME_SCORE + '<br/>';
+            }
+        }
+        this.leaderboard.innerHTML = lb_text;
     }
 
 }
